RESOLVED FIXED117860
REGRESSION(r145788): mouse drag on canvas shouldn't start selection
https://bugs.webkit.org/show_bug.cgi?id=117860
Summary REGRESSION(r145788): mouse drag on canvas shouldn't start selection
Ryosuke Niwa
Reported 2013-06-20 19:54:32 PDT
Example URL: http://www.ivank.net/veci/click_test.html Steps to reproduce the problem: 1. Open the URL 2. Press mouse on the left half of canvas 3. Drag to the right half and release the mouse. 4. Keep pressing, dragging and releasing mouse on the right half on canvas. What is the expected behavior? Canvas should support mouse events. If you look into console, it should always print (down, dragging*, up)* // pseudo regular expression What went wrong? Instead, after dragging over the middle of canvas, it gets selected and "mouseup" event does not work, it prints only (down, dragging*)*
Attachments
Fixes the bug (5.76 KB, patch)
2013-06-20 20:30 PDT, Ryosuke Niwa
benjamin: review+
Radar WebKit Bug Importer
Comment 1 2013-06-20 19:55:17 PDT
Ryosuke Niwa
Comment 2 2013-06-20 20:30:02 PDT
Created attachment 205143 [details] Fixes the bug
Ryosuke Niwa
Comment 3 2013-06-20 20:30:48 PDT
Comment on attachment 205143 [details] Fixes the bug I don't know what Chromium/Blink is doing to make mouse up not fire. That problem doesn't exist in WebKit. However, we should still not select the canvas element.
Benjamin Poulain
Comment 4 2013-06-20 20:47:41 PDT
Comment on attachment 205143 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=205143&action=review > LayoutTests/fast/events/mosuedrag-on-canvas-should-not-start-selection.html:11 > +description("This tests initiating a mouse drag on a canvas element doesn't start selection." > + + "To manually test, drag mouse on the canvas below. WebKit shouldn't select the canvas.") Missing space between the sentences (or remove the +)
Ryosuke Niwa
Comment 5 2013-06-20 20:53:04 PDT
Note You need to log in before you can comment on or make changes to this bug.