REGRESSION(r145788): mouse drag on canvas shouldn't start selection https://bugs.webkit.org/show_bug.cgi?id=117860

Reviewed by Benjamin Poulain.

Source/WebCore:

Like HTMLImageElement, HTMLCanvasElement shouldn't start selection.

Also uninline some virtual function overrides.

Test: fast/events/mosuedrag-on-canvas-should-not-start-selection.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::areAuthorShadowsAllowed):
(WebCore::HTMLCanvasElement::canContainRangeEndPoint):
(WebCore::HTMLCanvasElement::canStartSelection):
* html/HTMLCanvasElement.h:

LayoutTests:

Add a regression test for dragging mouse inside a canvas.
The canvas should not be selected and mouseup event should fire.

* fast/events/mosuedrag-on-canvas-should-not-start-selection-expected.txt: Added.
* fast/events/mosuedrag-on-canvas-should-not-start-selection.html: Added.


Canonical link: https://commits.webkit.org/135999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151822 268f45cc-cd09-0410-ab3c-d52691b4dbfc